fixng text-align

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2006,6 +2006,7 @@ body {
     background: #f4f4f4;
   }
   .team-member {
+    text-align: center;
     img {
       margin: auto;
     }
